<resources>
    	<string name="real_pay_ip">223.112.24.66:88</string>
    <string name="title_activity_main">访问专家</string>
    <string name="app_name">访问专家</string>
    <string name="home_page">首页</string>
    <string name="number">99+</string>
    <string name="title">体验问卷</string>
    <string name="content">个人研究者免费使用，支持手机或网页进行连接跟踪</string>
    <string name="user_name">未登录</string>
    <string name="introduce">德派软件自主研发的访问专家软件</string>
    <string name="upload">上传</string>
    <string name="knowleage">知识库</string>
    <string name="set">设  置</string>
    <string name="brief_introduction">德派面向企业和专业机构提供访问专家软件租用销售，调查技术支持，我们已经服务全球600家客户</string>
    <string name="company_name">德派软件(北京)有限公司</string>
    <string name="telphone">010-52886589</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="please_input_username">请填写用户名</string>
    <string name="please_input_password">请填写登录密码</string>
    <string name="pay_login">专业版登陆</string>
    <string name="free_login">免费版登陆</string>
    <string name="forget_password">忘记密码？</string>
    <string name="please_set_username">请设置用户名</string>
    <string name="please_set_password">请设置登录密码(6-20个字符)</string>
    <string name="pay_regist">专业版注册</string>
    <string name="free_regist">免费版注册</string>
    <string name="record_file">录音</string>
    <string name="subscibe_center">项目中心</string>
    <string name="quota_center">配额</string>
    <string name="quota_name">配额名称</string>
    <string name="quota_success">成功</string>
    <string name="quota_text">配额说明</string>
    <string name="quota_update">配额更新</string>
    <string name="searce">搜索</string>
    <string name="survey_landspace">问卷切换至横屏</string>
    <string name="portal">竖屏</string>
    <string name="survey_mapspace">问卷开启地图监控</string>
    <string name="survey_mapopen">开启</string>
    <string name="survey_mapclose">关闭</string>
    <string name="set_survey_size">设置答卷字号</string>
    <string name="big">大</string>
    <string name="set_ip">设置域名</string>
    <string name="dapchina_ip">dapchina.cn</string>
    <string name="update_apk">检测更新</string>
    <string name="current_version">当前版本3.0</string>
    <string name="total_M">总耗流量</string>
    <string name="down_M">下载流量</string>
    <string name="upload_M">上传流量</string>
    <string name="memory_total">内存(剩余/总共)</string>
    <string name="sdcar_total">SDCard(剩余/总共)</string>
    <string name="clean_cache">清除应用缓存</string>
    <string name="change_save_file">切换文件储存目录</string>
    <string name="data_monitor">监测数据</string>
    <string name="export_data">导出数据</string>
    <string name="check_data">(请查看SdCard/CAPI_DATA_EXPERT/...目录)</string>
    <string name="survey_title">公众体验问卷</string>
     <string name="download_sum">现有问卷</string>
     <string name="completed_num">已完成问卷</string>
      <string name="uploaded_num">已上传问卷</string>
      <string name="unUploaded_num">未上传问卷</string>
    <string name="recod_video">音频/视频</string>
    <string name="more_thing">类别</string>
    <string name="fw">访　问</string>
    <string name="review">预　览</string>
    <string name="map">地图</string>
    <string name="current_position">当前位置：</string>
    <string name="doing_local">没有定位成功</string>
    <string name="read_map">查看地图</string>
    <string name="read_quota">查看配额</string>
    <string name="no_quota">没有可下载的配额</string>
    <string name="read_ins">阅读说明</string>
    <string name="read_voice">查看录音 (%1$s)</string>
    <string name="read_vedio">查看视频 (%1$s)</string>
    <string name="select_all">全选</string>
	<string name="all_upload">全部上传</string>
	<string name="select_null">反选</string>
	<string name="question_info">问题信息</string>
	<string name="survey_ins">支持Android终端，超乎想象的人性化触感，将问卷、GPS定位、拍照、录音融合为一。支持 在线环境、离线环境下的数据采集,上报数据。</string>
	<string name="visit">开始访问</string>
	<string name="welcome_user">★ 欢迎进入监测数据页面，请您不要退出，技术人员正努力帮您调试。</string>
	<string name="send">发送</string>
	<string name="back_question">上一题</string>
	<string name="next_question">下一题</string>
	<string name="ok">确定</string>
	<string name="null_list">NO RECORDS</string>
	<string name="sorry_no_result">没有找到结果</string>
	<string name="no_title">没有标题</string>
	<string name="recode">录音</string>
	<string name="camera">拍照</string>
	<string name="video">摄像</string>
	<string name="input_name">请输入项目名称</string>
	<string name="inner_name">（有内部受邀名单）</string>
    <string name="land_port_change_p">问卷切换至横屏</string>
    <string name="land_port_change_l">问卷切换至竖屏</string>
    <string name="verital">竖屏</string>
    <string name="prot">横屏</string>
    <string name="middle">中</string>
    <string name="small">小</string>
	<string name="version">当前版本 %s</string>
	<string name="no_cache">无需清除应用缓存</string>
	<string name="change_save_sdcard">SDCard</string>
	<string name="change_save_inner">内部卡</string>
	<string name="choice_mode">选择的类别为：</string>
	<string name="no_find">很抱歉,没有找到该关键字</string>
	<string name="open_photo">打开图库</string>
	<string name="close_photo">关闭图库</string>
	<string name="no_upload">没有选择要上传的项目</string>
	 <string name="finish_survey_others">照片录音视频已经上报完成!</string>
	 <string name="finish_survey_starts">开始上传问卷的录音照片视频文件!</string>
	  <string name="finish_surveys">问卷上报完成!</string>
	 <string name="re_upload">又发现新附件，请把附件上传后在上传数据!</string>
	  <string name="null_upload">上传数据为空</string>
	  <string name="_continue">　继续　</string>
    <string name="pause">　暂停　</string>
    <string name="no_login">请先登录您的帐号</string>
     <string name="update_success">更新完成</string>
     <string name="once_again">再次按返回键退出</string>
     <string name="exit_fw">是否注销访问专家帐号？</string>
     <string name="exit_ok">注销成功</string>
     <string name="compare_survey">正在比对更新问卷...</string>
     <string name="no_explain">暂无说明</string>
     <string name="ftp_conect_fail">连接服务器失败</string>
     <string name="ftp_dire_fail">创建目录失败或者没有找到目录</string>
     <string name="ftp_workdire_fail">创建工作目录失败或者没有找到工作目录</string>
     <string name="dire_fail">目录创建失败</string>
     <string name="file_failed">上传文件失败</string>
	 <string name="file_exist">文件已经存在</string>
	<string name="remote_bigger_local">远程文件大于本地文件</string>
	<string name="delete_Remote_Faild">删除远程文件失败</string>
	<string name="no_reason_reupload">未知原因，请重新选择您要上传的项目，重新点击上传!</string>
	<string name="no_reason_reupload_exit">由于网络中断未获取服务器断点，请等待2分钟后重新上传即可，谢谢!</string>
	<string name="word_ins">的访前说明</string>
	<string name="word_num">问卷编号:    </string>
	<string name="word_time">发布时间:    </string>
	<string name="word_nohave">内部名单:    无</string>
	<string name="word_have">内部名单:    有</string>
	<string name="read_attach">查看删除附件</string>
    <string name="email_not_exit">邮箱不存在，请重新输入</string>
    <string name="regisit_fail">注册失败</string>
    <string name="knowlege_null">知识库为空</string>
    <string name="knowlege_accessory_downfail">知识库附件下载失败</string>
    <string name="knowlege_accessory_not_exsit">知识库附件不存在</string>
    <string name="map_no_recored">这一天的行程轨迹没有记录</string>
    <string name="survey_title_before">问卷标题</string>
    <string name="survey_id">问卷编号</string>
    <string name="publish_time">发布时间</string>
    <string name="download_url">下载地址</string>
    <string name="inner_done">内部名单</string>
    <string name="survey_description">详细说明</string>
	<string name="question_outying_display_right">本题显示行数量等于%1$s的数字回答项%2$s的填写数</string>
	<string name="search_review_question">请输入题目的编号</string>
	<string name="first_question">第一题</string>
	<string name="resume_load">题目编号不存在，请重新输入</string>
	<string name="format_wrong">输入格式不对，应为数字</string>
	<string name="current_no_explain">目前没有说明，请到网页端设置!</string>
	<string name="visit_explain">访前说明</string>
	<string name="current_time">当前时间</string>
	<string name="question_innerying_error">本题除选项%1$s之外的所有数字选项之和不等于选项%1$s的值</string>
    <string name="reset">重置</string>
    <string name="reset_fail">重置失败</string>
    <string name="no_need_reset">该项目没有可重置的数据</string>
	<string name="wait_pro">请耐心等待%s....</string>
	<string name="dialog_content">正在加载数据,请稍候....</string>
	<string name="less_compare">, 剩余重置比对</string>
	<string name="reset_success">重置功能完成</string>
	<string name="choiceType">选择状态</string>
	<string name="no_fang">%1$s</string>
	<string name="no_fang_mao">访问状态: %1$s</string>
	<string name="each_answer_associated">回答项关联</string>
	<string name="answer_value_reference">的回答值-引用</string>
	<string name="answer_value_rejection">的回答值-排斥</string>
	<string name="option_top">选项置顶</string>
	<string name="option_bottom">选项置底</string>
	<string name="sum">SUM</string>
	<string name="inner_refrense">本题是选项内部关联</string>
	<string name="aerial_mode">卫星模式</string>
	<string name="traffic_mode">交通模式</string>
	<string name="empty">空</string>
	<string name="no_meet">用户名或密码长度太长，不合要求</string>
	<string name="accessory">附件</string>
	<string name="view_attachments">——(点击可查看附件)</string>
	<string name="twenty_meters">20米</string>
	<string name="fifty_meters">50米</string>
	<string name="one_hundred_meters">100米</string>
	<string name="two_hundred_meters">200米</string>
	<string name="five_hundred_meters">500米</string>
	<string name="one_km">1公里</string>
	<string name="two_km">2公里</string>
	<string name="five_km">5公里</string>
	<string name="ten_km">10公里</string>
	<string name="twenty_km">20公里</string>
	<string name="twenty_five_km">25公里</string>
	<string name="fifty_km">50公里</string>
	<string name="one_hundred_km">100公里</string>
	<string name="two_hundred_km">200公里</string>
	<string name="five_hundred_km">500公里</string>
	<string name="one_thousand_km">1000公里</string>
	<string name="two_thousand_km">2000公里</string>
	<string name="intevention_notice">提示</string>
	<string name="decimel_places_no_meet">小数点后必须保留两位有效数字</string>
	<string name="sequence_repeat">选项值不能出现重复</string>
	<string name="luoji_wrong">逻辑错误</string>
    <string name="start">开始</string>
    <string name="cancle">取消</string>
    <string name="question_must">(必填项目)</string>
    <string name="question_order">Q%d.</string>
    <string name="msg_must">本题是必填项, 请作答.</string>
    <string name="msg_null_edit">您的文本框未填.</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="secord">秒</string>
    <string name="tab_local">访问</string>
    <string name="tab_author">下载</string>
    <string name="tab_upload">上传</string>
    <string name="tab_setting">更多</string>
    <string name="please_wait">请稍候....</string>
    <string name="exit_title">退出访问专家?</string>
    <string name="login_account_hint">帐号</string>
    <string name="login_password_hint">密码</string>
    <string name="welcome_version">Version %s</string>
    <string name="welcome_foot">www.dapchina.cn</string>
    <string name="login_offline">离 线 登 录</string>
    <string name="login_online">在 线 登 录</string>
    <string name="survey_name">项目名称</string>
    <string name="start_time">开始时间</string>
    <string name="update_time">更新时间</string>
    <string name="completed">已完成</string>
    <string name="unupload">未上传</string>
    <string name="operation">操作</string>
    <string name="download">下载</string>
    <string name="update">更新</string>
    <string name="exp_net">抱歉,您的网络不佳!</string>
    <string name="null_userid">请填写帐号.</string>
    <string name="null_pwd">请填写密码.</string>
    <string name="fail_login">登录失败!</string>
    <string name="sucess_login">登录成功!</string>
    <string name="welcom_user">欢迎, %s</string>
    <string name="upload_incompleted">上传未完成</string>
    <string name="upload_completed">上传已完成</string>
    <string name="back">返回</string>
    <string name="model_map">地图模式</string>
    <string name="model_visit">访问模式</string>
    <string name="road_line">路线</string>
    <string name="start_point_hit">起点:</string>
    <string name="end_point_hit">终点:</string>
    <string name="search_city">您要查询的城市:</string>
    <string name="search_city2">您要到达的城市:</string>
    <string name="search_hit">请输入您要搜索的关键字</string>
    <string name="map_address">当前位置: %s</string>
         <string name="remember_password">记住密码</string>
</resources>