<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/login_left_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/login_margin_top_big"
            android:layout_marginTop="@dimen/login_margin_top_big"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="#444"
            android:textSize="@dimen/index_detail"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/regist_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/login_margin_top_big"
            android:text="@string/regist"
            android:textColor="#444"
            android:textSize="@dimen/index_detail"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.01dip"
        android:layout_gravity="center"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </ImageView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/login_margin_top_big"
            android:layout_marginRight="@dimen/login_margin_top_big"
            android:layout_weight="3"
            android:background="@drawable/edittext_login_background"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/userNameLL"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingRight="@dimen/login_margin_top_big" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_margin_top_big"
                    android:src="@drawable/icon_username_gray" />

                <EditText
                    android:id="@+id/username_et"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/login_margin_top_big"
                    android:background="@android:color/transparent"
                    android:ems="20"
                    android:hint="@string/please_input_username"
                    android:textColor="#888"
                    android:textColorHint="#eeeeee"
                    android:textCursorDrawable="@drawable/curser_edit"
                    android:textSize="@dimen/adpter_text_size" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/userPassLL"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingRight="@dimen/login_margin_top_big" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_margin_top_big"
                    android:src="@drawable/icon_password" />

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/login_margin_top_big"
                    android:background="@android:color/transparent"
                    android:ems="20"
                    android:hint="@string/please_input_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/login_margin_top_big"
                    android:textColor="#888"
                    android:textColorHint="#eeeeee"
                    android:textCursorDrawable="@drawable/curser_edit"
                    android:textSize="@dimen/adpter_text_size" >
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" >
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/login_margin_top_big"
        android:paddingRight="@dimen/login_margin_top_big" >

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:textColor="@color/gray"
            android:textSize="@dimen/local_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/login_margin_top_big"
        android:paddingRight="@dimen/login_margin_top_big" >

        <Button
            android:id="@+id/pay_login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="8"
            android:background="@drawable/login_button_selector"
            android:text="@string/pay_login"
            android:textColor="@color/white"
            android:textSize="@dimen/adpter_text_size" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/free_login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_weight="8"
            android:background="@drawable/login_button_selector_free"
            android:text="@string/free_login"
            android:textColor="@color/white"
            android:textSize="@dimen/adpter_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:paddingLeft="@dimen/login_margin_top_big"
        android:paddingRight="@dimen/login_margin_top_big" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_top_big"
            android:text="@string/forget_password"
            android:textColor="@color/gray"
            android:textSize="@dimen/local_text_size"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>