<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/upload_left_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/login_margin_top_big"
            android:layout_marginTop="@dimen/login_margin_top_big"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/upload"
            android:textColor="#444"
            android:textSize="@dimen/index_detail"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginRight="@dimen/login_margin_top_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" 
            android:layout_alignParentRight="true">
            <CheckBox 
                android:id="@+id/select_all"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/select_all"
	            android:textColor="#50ad84"
	            android:layout_marginRight="@dimen/login_margin_top_big"
	            android:textSize="@dimen/local_text_size"
                />
            
             <!-- <TextView
	            android:id="@+id/select_all"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/select_all"
	            android:textColor="#50ad84"
	            android:layout_marginRight="@dimen/login_margin_top_big"
	            android:textSize="@dimen/local_text_size" /> -->
	    <LinearLayout 
	        android:id="@+id/all_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
	        >
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:src="@drawable/uploadall" />
             <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:text="@string/all_upload"
	            android:textColor="#50ad84"
	            android:textSize="@dimen/local_text_size"
	            android:layout_gravity="center"
	             />
             
	    </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.01dip"
        android:layout_gravity="center"
        android:background="@color/gray" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/login_margin_top_big"
        android:layout_weight="10"
        android:cacheColorHint="@color/transparent"
        android:divider="#e8e8e8"
        android:dividerHeight="1dp"
        android:scrollbars="none" >
    </ListView>
    <TextView
        android:id="@+id/no_upload_list_tv"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
       android:layout_marginTop="@dimen/login_margin_top_big"
        android:layout_weight="10"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/null_list"
        android:textColor="@color/blue"
        android:textSize="@dimen/index_detail"
        android:textStyle="bold"
        android:typeface="serif" />

</LinearLayout>