<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/subscibe_left_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/login_margin_top_big"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/subscibe_center"
            android:textColor="#444"
            android:textSize="@dimen/index_detail"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.01dip"
        android:layout_gravity="center"
        android:background="@color/gray" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/login_margin_top_big"
        android:layout_marginLeft="@dimen/login_margin_top_big"
        android:layout_marginRight="@dimen/login_margin_top_big"
        android:layout_marginTop="@dimen/login_margin_top_big"
        android:layout_weight="1"
        android:background="#f2f2f2" >

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/login_margin_top_big"
            android:src="@drawable/icon_search" />

        <EditText
            android:id="@+id/etSurvey"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/login_margin_top_big"
            android:layout_marginRight="@dimen/login_margin_top_big"
            android:layout_toRightOf="@+id/iv_search"
            android:background="@color/transparent"
            android:hint="@string/searce"
            android:textColor="#888"
            android:textColorHint="#d9d9d9"
            android:textSize="@dimen/adpter_text_size" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.01dip"
        android:layout_gravity="center"
        android:background="@color/gray" />

    <cn.dapchina.newsupper.view.MyListView
        android:id="@+id/listView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/login_margin_top_big"
        android:layout_marginRight="@dimen/login_margin_top_big"
        android:layout_marginTop="@dimen/login_margin_top_big"
        android:layout_weight="9"
        android:cacheColorHint="@color/transparent"
        android:divider="@color/white"
        android:dividerHeight="@dimen/login_margin_top"
        android:drawSelectorOnTop="true"
        android:fadingEdge="none"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none"
        android:scrollingCache="false" />

    <TextView
        android:id="@+id/no_author_list_tv"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/login_margin_top_big"
        android:layout_marginRight="@dimen/login_margin_top_big"
        android:layout_marginTop="@dimen/login_margin_top_big"
        android:layout_weight="9"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/null_list"
        android:textColor="@color/blue"
        android:textSize="@dimen/index_detail"
        android:textStyle="bold"
        android:typeface="serif" />

</LinearLayout>